--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.2.0",
+    "@angular/cdk": "^10.2.6",
     "@angular/common": "~10.2.0",
     "@angular/compiler": "~10.2.0",
     "@angular/core": "~10.2.0",
     "@angular/forms": "~10.2.0",
+    "@angular/http": "6.1.6",
+    "@angular/localize": "~10.2.0",
+    "@angular/material": "^10.2.6",
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "angular-in-memory-web-api": "0.5.4",
+    "bootstrap": "^4.5.0",
+    "core-js": "2.5.7",
+    "hammerjs": "2.0.8",
+    "jquery": "^3.5.1",
+    "moment": "2.22.2",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
     "tslib": "^2.0.0",
+    "web-animations-js": "2.3.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
