--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tree-add-delete": {
+    "tree": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tree-add-delete",
+            "outputPath": "dist/tree",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -64,18 +64,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tree-add-delete:build"
+            "browserTarget": "tree:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tree-add-delete:build:production"
+              "browserTarget": "tree:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tree-add-delete:build"
+            "browserTarget": "tree:build"
           }
         },
         "test": {
@@ -113,16 +113,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "tree-add-delete:serve"
+            "devServerTarget": "tree:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tree-add-delete:serve:production"
+              "devServerTarget": "tree:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "tree-add-delete"
+  "defaultProject": "tree"
 }
