--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-ngn{
+{
   "name": "tree",
   "version": "0.0.0",
   "scripts": {
@@ -7,7 +7,8 @@ ngn{
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -33,7 +34,14 @@ ngn{
     "save": "^2.4.0",
     "tslib": "^2.0.0",
     "web-animations-js": "2.3.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "bcryptjs": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
+    "mongoose": "^5.1.2",
+    "mongoose-unique-validator": "^2.0.1",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
